# aosdk

./: .travis.yml  meson.build  sonar-project.properties
include/: ao.h  corlett.h  cpuintrf.h  debug.h  imgui_user.h  m1sdr.h  mididump.h  osd_cpu.h  utils.h  wavedump.h
src/: ao.c  corlett.c  debug.cpp  dsnd.c  m1sdr.c  main.c  mididump.c  oss.c  sampledump.c  utils.c  wavedump.c
